# regime-aware-asset-allocation

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
config/: fixed_income.yaml  universe.yaml
data/processed/: regime_labels.csv
reports/: executive_summary.md  report.md
reports/fi_portfolio/: fi_portfolio_crisis_drawdowns.csv  fi_portfolio_findings.json  fi_portfolio_performance.csv
reports/fixed_income/: fi_ann_return_by_regime.csv  fi_ann_vol_by_regime.csv  fi_bond_equity_corr.csv  fi_es_5_by_regime.csv  fi_hit_rate_by_regime.csv  fi_max_drawdown_by_regime.csv  fi_regime_months.csv  fi_sharpe_by_regime.csv  fi_spreads_by_regime.csv  fi_var_5_by_regime.csv  fixed_income_findings.json
reports/long_history/: long_asset_sharpe_by_regime.csv  long_crisis_drawdowns.csv  long_history_findings.json  long_strategy_performance.csv
reports/phase1/: asset_ann_return_by_regime.csv  asset_ann_vol_by_regime.csv  asset_es_5_by_regime.csv  asset_hit_rate_by_regime.csv  asset_max_drawdown_by_regime.csv  asset_sharpe_by_regime.csv  asset_var_5_by_regime.csv  corr_All.csv  corr_Goldilocks.csv  corr_Overheating.csv  corr_Recession.csv  corr_Stagflation.csv  diversification_index.csv  key_pair_correlations.csv  phase1_findings.json  regime_counts.csv  regime_episodes.csv  transition_matrix.csv
reports/phase2/: factor_betas.csv  factor_ir_by_regime.csv  factor_mean_by_regime.csv  factor_r2.csv  factor_vol_by_regime.csv  hmm_persistence.csv  hmm_state_profiles.csv  hmm_transition_matrix.csv  market_regime_asset_returns.csv  phase2_findings.json  portfolio_factor_risk.csv  regime_method_agreement.csv
reports/phase3/: crisis_asset_returns.csv  crisis_correlations.csv  crisis_strategy_drawdowns.csv  currency_fx_vol_contribution.csv  currency_hedging_by_regime.csv  currency_hedging_comparison.csv  phase3_findings.json  (+8 more)
scripts/: build_pdf.py
tests/: test_metrics.py  test_portfolio.py  test_regimes.py
(+40 files in other folders)
