[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "regime-aware-asset-allocation"
version = "0.1.0"
description = "Institutional research: does regime-aware asset allocation beat static strategic asset allocation?"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Daniel Jackson" }]
keywords = [
    "asset-allocation",
    "macro-regimes",
    "portfolio-construction",
    "quantitative-finance",
    "risk-parity",
]

dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "pyarrow>=16.0",
    "requests>=2.32",
    "tenacity>=8.3",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "rich>=13.7",
]

[project.optional-dependencies]
advanced = [
    "hmmlearn>=0.3",      # Hidden Markov regime models (supplementary)
    "arch>=7.0",          # GARCH / volatility modelling (supplementary)
]
viz = [
    "seaborn>=0.13",
]
research = [
    "jupyterlab>=4.2",
    "ipywidgets>=8.1",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Repository = "https://github.com/Taff1887/regime-aware-asset-allocation"

[tool.hatch.build.targets.wheel]
packages = ["src/raa"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled pragmatically, not enforced hard

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]
